Fix alignment of logos in ProductCards

--- a/src/scss/includes/menu.scss
+++ b/src/scss/includes/menu.scss
@@ -138,6 +138,9 @@ $productDrawerWidth: 744px;
   }
 
   .productCard {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     margin-bottom: $spacing-s;
     padding: $spacing-xxl-3 $spacing-l;
